--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header id="header">
-        <h1 class="site-title"><a href=""><img src="/logo.svg" alt=""></a></h1>
+        <h1 class="site-title"><a href=""><img src="logo.svg" alt=""></a></h1>
         <nav>
             <ul>
                 <li><a href="">about</a></li>
                 <li><a href="">works</a></li>
                 <li><a href="">news</a></li>
                 <li><a href="">contact</a></li>
-                <li><a href="https://www.instagram.com/" target="_blank"><img src="/icon-instagram.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="icon-instagram.png" alt=""></a></li>
             </ul>
         </nav>
     </header>
@@ -25,8 +25,8 @@
     <main>
     <div id="mainvisual">
         <picture>
-            <source media="(max-width: 600px)" srcset="/mainvisual-sp.jpg">
-            <img src="/mainvisual-pc.jpg" alt="">
+            <source media="(max-width: 600px)" srcset="mainvisual-sp.jpg">
+            <img src="mainvisual-pc.jpg" alt="">
         </picture>
     </div>
 
