--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <section id="works" class="wrapper">
         <h2 class="sec-title">works</h2>
         <ul>
-            <li><img src="/works1.jpg" alt=""></li>
-            <li><img src="/works2.jpg" alt=""></li>
-            <li><img src="/works3.jpg" alt=""></li>
-            <li><img src="/works4.jpg" alt=""></li>
-            <li><img src="/works5.jpg" alt=""></li>
-            <li><img src="/works6.jpg" alt=""></li>
+            <li><img src="works1.jpg" alt=""></li>
+            <li><img src="works2.jpg" alt=""></li>
+            <li><img src="works3.jpg" alt=""></li>
+            <li><img src="works4.jpg" alt=""></li>
+            <li><img src="works5.jpg" alt=""></li>
+            <li><img src="works6.jpg" alt=""></li>
         </ul>
     </section>
 
